# IntelliDoc-A_MultiModal_RAG_based_QA_Chatbot

./: readme.md
Application/: .env  main.py  pyproject.toml  streamlit_app.py
Code/: scrape_cfa.py
Code/AIRFLOW_DAG/: .gitignore  docker-compose.yaml  dockerfile
Code/AIRFLOW_DAG/config/: big-data-analysis-437218-f3ef53bdd345.json
Code/AIRFLOW_DAG/dags/Assignmnet3/: pipeline_cfa.py
Diagrams/: Diagrams.ipynb  cfa_website_data_pipeline  diagramsCode.py  test.py
Search System/: .env  main.py  pinecone_test.py  pyproject.toml  streamlitapp.py
Search System/src/: vector_store.py
